projet_gl/src/test/deca/syntax/valid/listClass/parameters.deca
// Description:
//    test parser for DeclClass (extends).
//
// Resultats:
//    ok
//
// Historique:
//    cree le 19/01/2024



class test{
    int method(int a){}
    
}