projet_gl/src/test/deca/syntax/invalid/unaryExpr/incorrectNot.deca
// Description:
//    invalid test parser for not.
//
// Resultats:
//    ligne 13 : no viable alternative at input '}'
//
// Historique:
//    cree le 12/01/2024

{
    boolean a = true;
    !a
}